[package]
name = "sandbox"
version = "1.3.0"
edition = "2021"

[dependencies]
pixels = { git = "https://github.com/JMS55/pixels", branch = "main" }
wgpu = "0.13"
imgui = "0.8"
imgui-wgpu = "0.20"
imgui-winit-support = { version = "0.8", default-features = false, features = [
    "winit-26",
] }
winit = "0.26"
rand = "0.8"
rand_pcg = "0.3"
simdnoise = "3.1"
flume = { version = "0.10", default-features = false }
puffin = "0.13"
puffin-imgui = "0.17"
bytemuck = "1.11"

[profile.dev]
opt-level = 3

[profile.release]
lto = true
